Updates vm/an-zhuang-jenkins-ying-yong.md
Auto commit by GitBook Editor